welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:7: error: ';' expected but '(' found.
  avance();
        ^