welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def Fleur(c:Color) {
  setCouleurBrosse(c);
  baisseBrosse();
  avance(3);
  recule();
  gauche():
  avance();
  recule(2);
  avance();
  setCouleurBrosse(Color.yellow)
}